--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -19,25 +19,25 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Azonosító</div>
-        <input type="text" class="editform-edit editform-cw15" id="m2"
+        <input type="text" class="editform-edit em15width" id="m2"
                autocomplete="off"
                [(ngModel)]="cEmails[selected].Azonosito" name="m2">
       </div>
       <div class="editform-row">
         <div class="editform-label">Jelszó</div>
-        <input type="text" class="editform-edit editform-cw15" id="m3"
+        <input type="text" class="editform-edit em15width" id="m3"
                autocomplete="off"
                [(ngModel)]="cEmails[selected].Jelszo" name="m3">
       </div>
       <div class="editform-row">
         <div class="editform-label">A küldő neve</div>
-        <input type="text" class="editform-edit editform-cw15" id="m4"
+        <input type="text" class="editform-edit em15width" id="m4"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cEmails[selected].KuldoNeve" name="m4">
       </div>
       <div class="editform-row">
         <div class="editform-label">A küldő email címe</div>
-        <input type="text" class="editform-edit editform-cw15" id="m5"
+        <input type="text" class="editform-edit em15width" id="m5"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cEmails[selected].KuldoEmailcime" name="m5">
       </div>
@@ -53,7 +53,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Custom host</div>
-        <input type="text" class="editform-edit editform-cw15" id="m6"
+        <input type="text" class="editform-edit em15width" id="m6"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cEmails[selected].CustomHost" name="m6">
       </div>
