--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -6,7 +6,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="editform-edit editform-cw15" id="m1"
+        <input type="text" class="editform-edit em15width" id="m1"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Nev" name="m1">
       </div>
@@ -18,13 +18,13 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Helységnév</div>
-        <input type="text" class="editform-edit editform-cw15" id="m3"
+        <input type="text" class="editform-edit em15width" id="m3"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Helysegnev" name="m3">
       </div>
       <div class="editform-row">
         <div class="editform-label">Utca, házszám</div>
-        <input type="text" class="editform-edit editform-cw15" id="m4"
+        <input type="text" class="editform-edit em15width" id="m4"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Utcahazszam" name="m4">
       </div>
@@ -33,13 +33,13 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Bankszámla 1</div>
-        <input type="text" class="editform-edit editform-cw15" id="m5"
+        <input type="text" class="editform-edit em15width" id="m5"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Bankszamla1" name="m5">
       </div>
       <div class="editform-row">
         <div class="editform-label">Bankszámla 2</div>
-        <input type="text" class="editform-edit editform-cw15" id="m6"
+        <input type="text" class="editform-edit em15width" id="m6"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Bankszamla2" name="m6">
       </div>
