--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -13,7 +13,7 @@
 
       <div class="editform-row">
           <div class="editform-label">Új volume elérési út</div>
-          <input type="text" class="editform-edit editform-cw15" id="m2"
+          <input type="text" class="editform-edit em15width" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
       </div>
