--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -13,19 +13,19 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="editform-edit editform-cw15" id="nev"
+        <input type="text" class="editform-edit em15width" id="nev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Nev" name="nev">
       </div>
       <div class="editform-row">
         <div class="editform-label">Telefon</div>
-        <input type="text" class="editform-edit editform-cw15" id="telefon"
+        <input type="text" class="editform-edit em15width" id="telefon"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="DtoEdited.Telefon" name="telefon">
       </div>
       <div class="editform-row">
         <div class="editform-label">Email</div>
-        <input type="text" class="editform-edit editform-cw15" id="email"
+        <input type="text" class="editform-edit em15width" id="email"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="DtoEdited.Email" name="email">
       </div>
@@ -42,7 +42,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Log</div>
-        <select type="text" class="editform-combo editform-cw4"
+        <select type="text" class="editform-combo em4width"
                 [(ngModel)]="DtoEdited.Logonlog" name="log">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
