--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="editform-row">
           <div class="editform-label">Megnevezés</div>
-          <input type="text" class="editform-combo editform-cw15" id="megnevezes"
+          <input type="text" class="editform-combo em15width" id="megnevezes"
                  maxlength="50" required autocomplete="off"
                  [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="megnevezes">
       </div>
