--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Irattipus</div>
-        <input type="text" class="editform-edit editform-cw15" id="irattipus1"
+        <input type="text" class="editform-edit em15width" id="irattipus1"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Irattipus1" name="irattipus1">
       </div>
