--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -59,13 +59,13 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Custom port</div>
-        <input type="number" class="editform-edit editform-cw6" id="m7"
+        <input type="number" class="editform-edit em6width" id="m7"
                autocomplete="off"
                [(ngModel)]="cEmails[selected].CustomPort" name="m7">
       </div>
       <div class="editform-row">
         <div class="editform-label">Ssl</div>
-        <select type="text" class="editform-combo editform-cw6"
+        <select type="text" class="editform-combo em6width"
                 [(ngModel)]="cEmails[selected].Ssl" name="m8">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
