--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Irányítószám</div>
-        <input type="text" class="editform-edit editform-cw6" id="m2"
+        <input type="text" class="editform-edit em6width" id="m2"
                autocomplete="off" maxlength="10"
                [(ngModel)]="cSzallito.Iranyitoszam" name="m2">
       </div>
@@ -54,13 +54,13 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Adó áfakód</div>
-        <input type="text" class="editform-edit editform-cw6" id="m8"
+        <input type="text" class="editform-edit em6width" id="m8"
                autocomplete="off" maxlength="1"
                [(ngModel)]="cSzallito.Adoafakod" name="m8">
       </div>
       <div class="editform-row">
         <div class="editform-label">Adó megyekód</div>
-        <input type="text" class="editform-edit editform-cw6" id="m9"
+        <input type="text" class="editform-edit em6width" id="m9"
                autocomplete="off" maxlength="2"
                [(ngModel)]="cSzallito.Adomegyekod" name="m9">
       </div>
