--- a/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
+++ b/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
@@ -5,7 +5,7 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Ajánlat iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m1"
+          <input type="number" class="editform-edit em6width" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.AjanlatIratkod" name="m1">
       </div>
@@ -14,31 +14,31 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Szerződés iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m8"
+          <input type="number" class="editform-edit em6width" id="m8"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.SzerzodesIratkod" name="m8">
       </div>
       <div class="editform-row">
           <div class="editform-label">Szállítási szerződés iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m7"
+          <input type="number" class="editform-edit em6width" id="m7"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.SzallitasiSzerzodesIratkod" name="m7">
       </div>
       <div class="editform-row">
           <div class="editform-label">Feltételes szerződés iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m9"
+          <input type="number" class="editform-edit em6width" id="m9"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.FeltetelesSzerzodesIratkod" name="m9">
       </div>
       <div class="editform-row">
           <div class="editform-label">OFT szerződés iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m10"
+          <input type="number" class="editform-edit em6width" id="m10"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.OFTSzerzodesIratkod" name="m10">
       </div>
       <div class="editform-row">
           <div class="editform-label">HMKE tulajdonos hozzájárulás iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m11"
+          <input type="number" class="editform-edit em6width" id="m11"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.HMKEtulajdonoshozzajarulasIratkod" name="m11">
       </div>
@@ -47,13 +47,13 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Munkalap iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m6"
+          <input type="number" class="editform-edit em6width" id="m6"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.MunkalapIratkod" name="m6">
       </div>
       <div class="editform-row">
           <div class="editform-label">Elégedettségi felmérés iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m2"
+          <input type="number" class="editform-edit em6width" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.ElegedettsegiFelmeresIratkod" name="m2">
       </div>
@@ -62,31 +62,31 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m4"
+          <input type="number" class="editform-edit em6width" id="m4"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.KeszrejelentesElmuemaszIratkod" name="m4">
       </div>
       <div class="editform-row">
           <div class="editform-label">Készrejelentés E.ON iratkód</div>
-          <input type="number" class="editform-edit editform-cw6" id="m5"
+          <input type="number" class="editform-edit em6width" id="m5"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.KeszrejelentesEonIratkod" name="m5">
       </div>
       <div class="editform-row">
         <div class="editform-label">Készrejelentés MVM iratkód</div>
-        <input type="number" class="editform-edit editform-cw6" id="m3"
+        <input type="number" class="editform-edit em6width" id="m3"
                autocomplete="off"
                [(ngModel)]="cProjekt.KeszrejelentesMvmIratkod" name="m3">
       </div>
       <div class="editform-row">
         <div class="editform-label">Készrejelentés EON/ELMÜ iratkód</div>
-        <input type="number" class="editform-edit editform-cw6" id="m31"
+        <input type="number" class="editform-edit em6width" id="m31"
                autocomplete="off"
                [(ngModel)]="cProjekt.KeszrejelentesEonelmuIratkod" name="m31">
       </div>
       <div class="editform-row">
         <div class="editform-label">Készrejelentés MVM/ÉMÁSZ iratkód</div>
-        <input type="number" class="editform-edit editform-cw6" id="m32"
+        <input type="number" class="editform-edit em6width" id="m32"
                autocomplete="off"
                [(ngModel)]="cProjekt.KeszrejelentesMvmemaszIratkod" name="m32">
       </div>
