--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -34,7 +34,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Státusz</div>
-        <select type="text" class="editform-combo editform-cw6"
+        <select type="text" class="editform-combo em6width"
                 [(ngModel)]="DtoEdited.Statusz" name="statusz">
           <option>OK</option>
           <option>Tiltott</option>
