--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">KT</div>
-          <input type="text" class="editform-combo editform-cw6" id="kt"
+          <input type="text" class="editform-combo em6width" id="kt"
                  maxlength="30" required autocomplete="off"
                  [(ngModel)]="DtoEdited.Termekdijkt" name="kt">
       </div>
@@ -19,7 +19,7 @@
       </div>
       <div class="editform-row">
           <div class="editform-label">Egységár</div>
-          <input type="number" class="editform-combo editform-cw6" id="egysegar"
+          <input type="number" class="editform-combo em6width" id="egysegar"
                  required autocomplete="off"
                  [(ngModel)]="DtoEdited.Termekdijegysegar" name="egysegar">
       </div>
